Mise en place architecture MVC (3) / Test fonctionnalité kanji

--- a/Config/prod.ini
+++ b/Config/prod.ini
@@ -1,5 +1,8 @@
 ; Configuration pour la production
 
+[Installation]
+root = /Projet-5/
+
 [BD]
 dsn = 'mysql:hostname=localhost;dbname=test;charset=utf8'
 login = root
