--- a/Config/dev.ini
+++ b/Config/dev.ini
@@ -1,5 +1,8 @@
 ; Configuration pour le développement
 
+[Installation]
+root = /Projet-5/
+
 [BD]
 dsn = 'mysql:hostname=localhost;dbname=test;charset=utf8'
 login = root
