--- a/Config/dev.ini
+++ b/Config/dev.ini
@@ -1,9 +1,9 @@
 ; Configuration pour le développement
 
 [Installation]
-root = /Projet-5/
+root = /test/Projet-5/
 
 [BD]
-dsn = 'mysql:hostname=localhost;dbname=test;charset=utf8'
+dsn = 'mysql:hostname=localhost;dbname=Projet-5;charset=utf8'
 login = root
 mdp =
